--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <title>weblap</title>
+    <sytle>
+      body {backgound-color: blue;}
+      </style>
     
   </head>
   <body>
